début pages bages

--- a/projects/basket.html
+++ b/projects/basket.html
@@ -30,19 +30,60 @@
     </div>
 </nav>
 <div class="titleimg">
-    <div class="projecttitle">
+    <div class="imageprincipal">
+        <img class="imageprincipalBages" src="../img/bages/imageprincipa.jpg" alt="Union Basket Des Aspres">
+    </div>
+    <div class="projecttitleGrizzlys">
         <div class="titletext">
-            <h1>Union Basket Des Aspres</h1>
+            <h1>UNION BASKET DES ASPRES</h1>
         </div>
         <div class="subtitleProject">
-            <p class="subtitleProject">ENGAGEMENT ÉTUDIANT </p>
+            <p class="subtitleProject">ENGAGEMENT ÉTUDIANT</p>
         </div>
     </div>
-    <div class="imageprincipal">
-        <img class="image1" src="../img/bages/imageprincipal.webp" alt="Union Basket Des Aspres">
+</div>
+
+<div class="informationsProject">
+    <div class="informationsProjectLeft">
+        <div>
+            <h2 class="infoMiniTitle">ASSOCIATION</h2>
+            <p class="infoMiniText">UNION BASKET DES ASPRES</p>
+        </div>
+        <div>
+            <h2 class="infoMiniTitle">LOCALISATION</h2>
+            <p class="infoMiniText">BAGES</p>
+        </div>
+        <div>
+            <h2 class="infoMiniTitle">ANNÉE</h2>
+            <p class="infoMiniText">2025</p>
+        </div>
+    </div>
+    <div class="informationsProjectRight">
+        <h2 class="infoMiniTitle">DESCRIPTION</h2>
+        <p class="infoMiniText">’Union Basket des Aspres fête ses 50 ans d’existence depuis sa création en 1976. À l’origine, le club portait le nom de Bages Basket Club des Aspres et des Albères (BBCAA). Cette année, l’association a adopté un nouveau logo : désormais appelée Union Basket des Aspres, elle affiche une identité visuelle entièrement renouvelée, avec un nouveau nom et de nouvelles couleurs.
+            Implantée dans les communes de Brouilla, Bages et Saint-Génis des Fontaines, l’UBA accueille aujourd’hui près de 200 licenciés répartis sur une dizaine d’équipes, de U7 aux loisirs</p>
     </div>
 </div>
-<h2>vdjifughsfhusdf</h2>
+<div class="projectContentGrizzlys">
+    <div class="colorsProjectGrizzlys">
+        <div class="fleche">
+            <img class="imgFleche" src="../img/grizzlys/petiteFleche.webp">
+            <p class="TextLogo">Le logo</p>
+        </div>
+        <div class="logoGrizzlys">
+            <img class="imgLogoBages" src="../img/bages/logo.webp">
+        </div>
+        <div class="colorVert1">
+        </div>
+        <div class="colorVert2">
+        </div>
+        <div class="colorVert3">
+        </div>
+        <div class="colorBlanc">
+        </div>
+
+    </div>
+
 
 <script src="../data.js"></script>
 <script src="../script.js"></script>
