--- a/projects/grizzlys.html
+++ b/projects/grizzlys.html
@@ -91,7 +91,7 @@
                     <source src="../img/grizzlys/reelTel/réel1.mov" type="video/mp4">
                 </video>
             </div>
-            <p>Réel Instagram sur un entraînement découverte des plus jeunes sur le compte @grizzlys_association.</p>
+            <p>Story Instagram sur l’entraînement des petits sur le compte @grizzlys_catalans.</p>
         </div>
     </div>
     <div class="iphone">
@@ -100,7 +100,7 @@
             <video id="video2" class="video" controls autoplay loop muted poster="../img/grizzlys/photoRéel2.png">
                 <source src="../img/grizzlys/reelTel/réel2.mov" type="video/mp4">
             </video>
-            <p>Story Instagram sur l’entraînement des petits sur le compte @grizzlys_catalans.</p>
+            <p>Réel Instagram sur un entraînement découverte des plus jeunes sur le compte @grizzlys_association.</p>
         </div>
     </div>
     <div class="appareil-wrapper">
@@ -188,16 +188,12 @@
         </script>
 
     </div>
-    <div class="containerTextTrophy"><p class="textReel">Réel Instagram d’une trend avec les joueurs...(chercher description)</p>
+    <div class="containerTextTrophy"><p class="textReel">Réel Instagram d’une trend avec les joueurs des Grizzlys Catalans, réalisé pour montrer l’ambiance et l’énergie de l’équipe.</p>
         <div class="containerTrophy">
-            <div style="width: 200px">
-
-            </div>
             <div class="trophy">
                 <img class="imgTrophy" src="../img/grizzlys/trophy.webp" alt="Trophée Grizzlys Catalans"/>
                 <img class="imgFleche" src="../img/grizzlys/petiteFleche.webp">
-                <p class="textTrophy">Trophée remporté par les Grizzlys Catalans en 2018 lors de leur victoire au
-                    championnat de France de Division 3.</p>
+                <p class="textTrophy">Trophée réalisé pour récompenser les meilleurs joueurs de la saison.</p>
 
             </div>
         </div>
