ajout projet maillol

--- a/projects/grizzlys.html
+++ b/projects/grizzlys.html
@@ -87,7 +87,7 @@
         <div class="textUnderPhone">
             <div style="display: flex">
                 <img class="tel" src="../img/grizzlys/tel.webp" alt="">
-                <video id="video1" class="video" controls autoplay loop muted poster="../img/grizzlys/photoRéel1.png">
+                <video id="video1" class="video" controls loop muted poster="../img/grizzlys/photoRéel1.png">
                     <source src="../img/grizzlys/reelTel/réel1.mov" type="video/mp4">
                 </video>
             </div>
@@ -97,7 +97,7 @@
     <div class="iphone">
         <div class="textUnderPhone">
             <img class="tel" src="../img/grizzlys/tel.webp" alt="">
-            <video id="video2" class="video" controls autoplay loop muted poster="../img/grizzlys/photoRéel2.png">
+            <video id="video2" class="video" controls loop muted poster="../img/grizzlys/photoRéel2.png">
                 <source src="../img/grizzlys/reelTel/réel2.mov" type="video/mp4">
             </video>
             <p>Réel Instagram sur un entraînement découverte des plus jeunes sur le compte @grizzlys_association.</p>
@@ -191,7 +191,7 @@
     <div class="containerTextTrophy"><p class="textReel">Réel Instagram d’une trend avec les joueurs des Grizzlys Catalans, réalisé pour montrer l’ambiance et l’énergie de l’équipe.</p>
         <div class="containerTrophy">
             <div class="trophy">
-                <img class="imgTrophy" src="../img/grizzlys/trophy.webp" alt="Trophée Grizzlys Catalans"/>
+                <img class="imgTrophy" src="../img/grizzlys/trophy.png" alt="Trophée Grizzlys Catalans"/>
                 <img class="imgFleche" src="../img/grizzlys/petiteFleche.webp">
                 <p class="textTrophy">Trophée réalisé pour récompenser les meilleurs joueurs de la saison.</p>
 
