--- a/projects/lycee.html
+++ b/projects/lycee.html
@@ -2,6 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+
+</body><!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
     <title>Portfolio - Union Basket Des Aspres</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../project.css">
@@ -31,14 +39,14 @@
 </nav>
 <div class="titleimg">
     <div class="imageprincipal">
-        <img class="imageprincipalBages" src="../img/bages/imageprincipa.jpg" alt="Union Basket Des Aspres">
+        <img class="imageprincipalBages" src="../img/lycee/imagePrincipal.jpg" alt="Union Basket Des Aspres">
     </div>
     <div class="projecttitleGrizzlys">
         <div class="titletext">
-            <h1>UNION BASKET DES ASPRES</h1>
+            <h1>LYCÉE ARISTIDE MAILLOL</h1>
         </div>
         <div class="subtitleProject">
-            <p class="subtitleProject">ENGAGEMENT ÉTUDIANT</p>
+            <p class="subtitleProject">PROJET SCOLAIRE</p>
         </div>
     </div>
 </div>
@@ -47,11 +55,11 @@
     <div class="informationsProjectLeft">
         <div>
             <h2 class="infoMiniTitle">ASSOCIATION</h2>
-            <p class="infoMiniText">UNION BASKET DES ASPRES</p>
+            <p class="infoMiniText">LYCÉE ARISTIDE MAILLOL</p>
         </div>
         <div>
             <h2 class="infoMiniTitle">LOCALISATION</h2>
-            <p class="infoMiniText">BAGES</p>
+            <p class="infoMiniText">PERPIGNAN</p>
         </div>
         <div>
             <h2 class="infoMiniTitle">ANNÉE</h2>
@@ -60,32 +68,11 @@
     </div>
     <div class="informationsProjectRight">
         <h2 class="infoMiniTitle">DESCRIPTION</h2>
-        <p class="infoMiniText">L’Union Basket des Aspres fête ses 50 ans d’existence depuis sa création en 1976. À l’origine, le club portait le nom de Bages Basket Club des Aspres et des Albères (BBCAA). Cette année, l’association a adopté un nouveau logo : désormais appelée Union Basket des Aspres, elle affiche une identité visuelle entièrement renouvelée, avec un nouveau nom et de nouvelles couleurs.
-            Implantée dans les communes de Brouilla, Bages et Saint-Génis des Fontaines, l’UBA accueille aujourd’hui près de 200 licenciés répartis sur une dizaine d’équipes, de U7 aux loisirs.</p>
+        <p class="infoMiniText">Lors de ma première année de BTS Communication, j’ai réalisé une vidéo pour présenter notre formation. J’ai dû penser à plusieurs étapes : créer un petit scénario, choisir les plans et le cadrage, trouver les bons lieux pour filmer et organiser la vidéo pour qu’elle soit agréable à regarder. Je me suis aussi demandé quelles émotions nous voulions transmettre, afin que le public comprenne bien l’ambiance et les valeurs du BTS. Ce projet m’a aidé à développer ma créativité et à transformer une idée en une vidéo claire et intéressante.</p>
     </div>
 </div>
-<div class="projectContentGrizzlys">
-    <div class="colorsProjectGrizzlys">
-        <div class="fleche">
-            <img class="imgFleche" src="../img/grizzlys/petiteFleche.webp">
-            <p class="TextLogo">Le logo</p>
-        </div>
-        <div class="logoGrizzlys">
-            <img class="imgLogoBages" src="../img/bages/logo.webp">
-        </div>
-        <div class="colorVert1">
-        </div>
-        <div class="colorVert2">
-        </div>
-        <div class="colorVert3">
-        </div>
-        <div class="colorBlanc">
-        </div>
-
-    </div>
-
-
-<script src="../data.js"></script>
-<script src="../script.js"></script>
+    <script src="../data.js"></script>
+    <script src="../script.js"></script>
 </body>
+</html>
 </html>
