fin de la page lycée

--- a/projects/catalattitude.html
+++ b/projects/catalattitude.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Portfolio - Union Basket Des Aspres</title>
+    <title>Portfolio - Catal'attitude</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../project.css">
     <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
