--- a/projects/lycee.html
+++ b/projects/lycee.html
@@ -2,15 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body><!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Portfolio - Union Basket Des Aspres</title>
+    <title>Portfolio - Lycée Aristide Maillol</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../project.css">
     <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
@@ -68,13 +60,14 @@
     </div>
     <div class="informationsProjectRight">
         <h2 class="infoMiniTitle">DESCRIPTION</h2>
-        <p class="infoMiniText">Lors de ma première année de BTS Communication, j’ai réalisé une vidéo pour présenter notre formation. J’ai dû penser à plusieurs étapes : créer un petit scénario, choisir les plans et le cadrage, trouver les bons lieux pour filmer et organiser la vidéo pour qu’elle soit agréable à regarder. Je me suis aussi demandé quelles émotions nous voulions transmettre, afin que le public comprenne bien l’ambiance et les valeurs du BTS. Ce projet m’a aidé à développer ma créativité et à transformer une idée en une vidéo claire et intéressante.</p>
+        <p class="infoMiniText">Le <strong>lycée Aristide Maillol</strong> de Perpignan a été créé au milieu des années 1990 et a ouvert ses portes vers 1995-1996, pour répondre à l’augmentation du nombre d’élèves dans la ville.
+            <br>La formation BTS Communication y est proposée depuis les années 2010. Elle prépare les étudiants aux métiers de la communication en deux ans après le baccalauréat.</p>
     </div>
 </div>
 <div class="mainVideoWrapper">
     <div class="fullVideoContainer">
-        <video controls poster="../img/grizzlys/photoRéel1.png">
-            <source src="../img/grizzlys/réelchanson.MOV" type="video/mp4">
+        <video controls autoplay poster="../img/lycee/videoPoster.jpg" class="fullVideo">
+            <source src="../img/lycee/videoLycee.mov" type="video/mp4">
             Votre navigateur ne supporte pas la vidéo.
         </video>
     </div>
@@ -84,9 +77,7 @@
         <div class="detailContent">
             <h2 class="detailTitle">RÉALISATION AUDIOVISUELLE</h2>
             <p class="detailText">
-                Ce montage est l'aboutissement d'un travail de réflexion sur l'image et le rythme.
-                De la scénarisation à l'export final, chaque plan a été choisi pour refléter
-                fidèlement l'énergie de la formation au Lycée Aristide Maillol.
+                Lors de ma première année de BTS Communication, j’ai réalisé une vidéo pour présenter notre formation. J’ai dû penser à plusieurs étapes : créer un petit scénario, choisir les plans et le cadrage, trouver les bons lieux pour filmer et organiser la vidéo pour qu’elle soit agréable à regarder. Je me suis aussi demandé quelles émotions nous voulions transmettre, afin que le public comprenne bien l’ambiance et les valeurs du BTS. Ce projet m’a aidé à développer ma créativité et à transformer une idée en une vidéo claire et intéressante.
             </p>
         </div>
     </div>
