debut de ienfuegos

--- a/projects/cienfuegos.html
+++ b/projects/cienfuegos.html
@@ -31,11 +31,11 @@
 </nav>
 <div class="titleimg">
     <div class="imageprincipal">
-        <img class="imageprincipalBages" src="../img/lycee/imagePrincipal.jpg" alt="Union Basket Des Aspres">
+        <img class="imageprincipalBages" src="../img/cienfuegos/imagePrincipal.webp" alt="Cienfuegos">
     </div>
     <div class="projecttitleGrizzlys">
         <div class="titletext">
-            <h1>LYCÉE ARISTIDE MAILLOL</h1>
+            <h1>FESTIVAL CIENFUEGOS</h1>
         </div>
         <div class="subtitleProject">
             <p class="subtitleProject">PROJET SCOLAIRE</p>
@@ -47,11 +47,11 @@
     <div class="informationsProjectLeft">
         <div>
             <h2 class="infoMiniTitle">ASSOCIATION</h2>
-            <p class="infoMiniText">LYCÉE ARISTIDE MAILLOL</p>
+            <p class="infoMiniText">FESTIVAL CIENFUEGOS</p>
         </div>
         <div>
             <h2 class="infoMiniTitle">LOCALISATION</h2>
-            <p class="infoMiniText">PERPIGNAN</p>
+            <p class="infoMiniText">ALENYA</p>
         </div>
         <div>
             <h2 class="infoMiniTitle">ANNÉE</h2>
@@ -60,8 +60,39 @@
     </div>
     <div class="informationsProjectRight">
         <h2 class="infoMiniTitle">DESCRIPTION</h2>
-        <p class="infoMiniText">Le <strong>lycée Aristide Maillol</strong> de Perpignan a été créé au milieu des années 1990 et a ouvert ses portes vers 1995-1996, pour répondre à l’augmentation du nombre d’élèves dans la ville.
-            <br>La formation BTS Communication y est proposée depuis les années 2010. Elle prépare les étudiants aux métiers de la communication en deux ans après le baccalauréat.</p>
+        <p class="infoMiniText">Le <STRONG>festival Cienfuegos</STRONG> d’Alénya, créé en 2020, est un événement latino-cubain organisé chaque été dans le parc du village. Il est entièrement gratuit et propose pendant quelques jours des concerts, des animations de danse (salsa, bachata…), des projections de films et un petit village avec restauration et artisanat.
+            Le festival a aussi une dimension solidaire, avec une collecte de médicaments ou de lunettes pour soutenir Cuba.</p>
+    </div>
+</div>
+<div class="projectContentGrizzlys">
+    <div class="colorsProjectCienfuegos">
+        <div class="fleche">
+            <img class="imgFleche" src="../img/grizzlys/petiteFleche.webp">
+            <p class="TextLogo">Le logo</p>
+            <p class="NoCharte">(pas de charte graphique existante)</p>
+        </div>
+
+        <div class="logoCienfuegos">
+            <img class="imgLogoCienfuegos" src="../img/cienfuegos/logo.png">
+        </div>
+        <div class="colorNoir">
+        </div>
+    </div>
+</div>
+<div class="palette-container">
+    <div class="circles-group">
+        <div class="circle red"></div>
+        <div class="circle orange"></div>
+        <div class="circle yellow"></div>
+        <div class="circle green"></div>
+    </div>
+
+    <div class="logo-wrapper">
+        <img src="../img/cienfuegos/logCienfuegosAnouk" alt="Logo Cienfuegos" class="main-logo">
+
+        <img src="../img/grizzlys/petiteFleche.webp" alt="" class="arrow">
+
+        <span class="logo-caption">Proposition d'un nouveau logo</span>
     </div>
 </div>
 <div class="mainVideoWrapper">
@@ -73,7 +104,7 @@
     </div>
 
     <div class="videoDetailSection">
-        <div class="detailLine"></div>
+        <div class="detailLineCienfuegos"></div>
         <div class="detailContent">
             <h2 class="detailTitle">RÉALISATION AUDIOVISUELLE</h2>
             <p class="detailText">
@@ -105,8 +136,8 @@
         </div>
     </nav>
 </footer>
-    <script src="../data.js"></script>
-    <script src="../script.js"></script>
+<script src="../data.js"></script>
+<script src="../script.js"></script>
 </body>
 </html>
 </html>
