--- a/projects/grizzlys.html
+++ b/projects/grizzlys.html
@@ -78,7 +78,6 @@
         </div>
         <div class="colorNoir">
         </div>
-
     </div>
 </div>
 <img src="../img/grizzlys/grandeFleche.webp" class="grandeFleche" alt="">
@@ -208,19 +207,19 @@
 <h2 class="titlePublication">Publications Instagram</h2>
 <div class="imgGrid">
     <div class="divCreaGrid">
-        <p class="textHover ">description image 1</p>
+        <p class="textHover ">Cette publication annonce la victoire des U20 (108-00). La photo de célébration montre la fierté et la cohésion de l'équipe.</p>
         <img class="creaGrid" src="../img/grizzlys/imageGrid/1.webp" alt="Création Grizzlys Catalans">
     </div>
     <div class="divCreaGrid">
-        <p class="textHover ">description image 2</p>
+        <p class="textHover ">Cette publication promeut le match des U20 contre les Ours de Toulouse. Le visuel précise les informations pratiques (lieu, date, heure) pour le public.</p>
         <img class="creaGrid" src="../img/grizzlys/imageGrid/2.webp" alt="Création Grizzlys Catalans">
     </div>
     <div class="divCreaGrid">
-        <p class="textHover ">description image 3</p>
+        <p class="textHover ">Cette publication annonce la victoire des U20 (50-44). La photo de célébration montre la fierté et la cohésion de l'équipe.</p>
         <img class="creaGrid" src="../img/grizzlys/imageGrid/3.webp" alt="Création Grizzlys Catalans">
     </div>
     <div class="divCreaGrid">
-        <p class="textHover ">description image 4</p>
+        <p class="textHover ">Cette publication présente la journée découverte du Flag Football pour les plus jeunes. Le visuel donne les informations pratiques et utilise des photos d'enfants en action pour inviter les nouveaux joueurs à essayer ce sport.</p>
         <img class="creaGrid" src="../img/grizzlys/imageGrid/4.webp" alt="Création Grizzlys Catalans">
     </div>
     <div class="divCreaGrid">
