ajout des vidéo de l'accent catalan

--- a/projects/grizzlys.html
+++ b/projects/grizzlys.html
@@ -86,7 +86,7 @@
         <div class="textUnderPhone">
             <div style="display: flex">
                 <img class="tel" src="../img/grizzlys/tel.webp" alt="">
-                <video id="video1" class="video" controls loop  poster="../img/grizzlys/photoRéel1.png">
+                <video id="video1" class="video video1" controls loop  poster="../img/grizzlys/photoRéel1.png">
                     <source src="../img/grizzlys/reelTel/réel1.mov" type="video/mp4">
                 </video>
             </div>
@@ -96,7 +96,7 @@
     <div class="iphone">
         <div class="textUnderPhone">
             <img class="tel" src="../img/grizzlys/tel.webp" alt="">
-            <video id="video2" class="video" controls loop  poster="../img/grizzlys/photoRéel2.png">
+            <video id="video2" class="video video1" controls loop  poster="../img/grizzlys/photoRéel2.png">
                 <source src="../img/grizzlys/reelTel/réel2.mov" type="video/mp4">
             </video>
             <p>Réel Instagram sur un entraînement découverte des plus jeunes sur le compte @grizzlys_association.</p>
