accent caalan en avancer

--- a/projects/grizzlys.html
+++ b/projects/grizzlys.html
@@ -223,23 +223,23 @@
         <img class="creaGrid" src="../img/grizzlys/imageGrid/4.webp" alt="Création Grizzlys Catalans">
     </div>
     <div class="divCreaGrid">
-        <p class="textHover">description image 5</p>
+        <p class="textHover">Ce visuel accompagne la slide précédente pour compléter la présentation de la journée découverte. Il explique simplement les règles du Flag Football pour rassurer les parents et les enfants.</p>
         <img class="creaGrid" src="../img/grizzlys/imageGrid/5.webp" alt="Création Grizzlys Catalans">
     </div>
     <div class="divCreaGrid">
-        <p class="textHover">description image 6</p>
+        <p class="textHover">Cette publication met en avant la ligne offensive du club à travers une mention spéciale de l'entraîneur pour la quatrième semaine de compétition. Ce contenu sert à féliciter les joueurs publiquement et montre la reconnaissance du staff envers leurs efforts.</p>
         <img class="creaGrid" src="../img/grizzlys/imageGrid/6.webp" alt="Création Grizzlys Catalans">
     </div>
     <div class="divCreaGrid">
-        <p class="textHover">description image 7</p>
+        <p class="textHover">Cette publication félicite Bastien Lemaitre, élu meilleur attaquant du match lors de la quatrième semaine du championnat. Le visuel souligne sa performance et valorise les talents du club.</p>
         <img class="creaGrid" src="../img/grizzlys/imageGrid/7.webp" alt="Création Grizzlys Catalans">
     </div>
     <div class="divCreaGrid">
-        <p class="textHover">description image 8</p>
+        <p class="textHover">Cette publication présente la journée de recrutement du club. Le visuel montre des joueurs en action et donne les informations pratiques pour inviter de nouveaux talents à rejoindre l’équipe.</p>
         <img class="creaGrid" src="../img/grizzlys/imageGrid/8.webp" alt="Création Grizzlys Catalans">
     </div>
     <div class="divCreaGrid">
-        <p class="textHover">description image 9</p>
+        <p class="textHover">Ce visuel accompagne la slide précédente pour détailler le programme de la journée. Il énonce les étapes clés pour rassurer les futurs joueurs sur le déroulement de leur accueil.</p>
         <img class="creaGrid" src="../img/grizzlys/imageGrid/9.webp" alt="Création Grizzlys Catalans">
     </div>
 </div>
