--- a/projects/catalattitude.html
+++ b/projects/catalattitude.html
@@ -239,16 +239,44 @@
 <!--        <p class="textHover ">Cette publication annonce la victoire des U20 (108-00). La photo de célébration montre la fierté et la cohésion de l'équipe.</p>-->
         <img class="creaGrid" src="../img/Catal’attitude/Post%20concours%205%20ans.png" alt="Création Catal'attitude">
     </div>
-    <div style="width: 300px; height: 375px; overflow: hidden; border: 1px solid #dbdbdb; border-radius: 3px;">
-        <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/DTOFVxnis4a/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" style=" background:#FFF; border:0; margin:0; padding:0; width:300px;">
-        </blockquote>
-    </div>
+    <style>
+        .instagram-container-wrapper {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            justify-content: center;
+        }
 
+        .insta-box {
+            width: 300px;
+            height: 375px;
+            overflow: hidden;
+            border: 1px solid #dbdbdb;
+            border-radius: 8px;
+            background: #fff;
+            display: flex;
+            justify-content: center;
+            position: relative;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+        }
 
+        /* On force l'embed à prendre la largeur mais on le laisse déborder en bas si besoin */
+        .insta-box blockquote {
+            margin: 0 !important;
+            padding: 0 !important;
+            width: 100% !important;
+            min-width: 100% !important;
+        }
+    </style>
 
-    <div style="width: 300px; height: 375px; overflow: hidden; border: 1px solid #dbdbdb; border-radius: 3px;">
-        <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/DRyrwutihyN/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" style=" background:#FFF; border:0; margin:0; padding:0; width:300px;">
-        </blockquote>
+    <div class="instagram-container-wrapper">
+        <div class="insta-box">
+            <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/DTOFVxnis4a/" data-instgrm-version="14"></blockquote>
+        </div>
+
+        <div class="insta-box">
+            <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/DRyrwutihyN/" data-instgrm-version="14"></blockquote>
+        </div>
     </div>
 
     <script async src="//www.instagram.com/embed.js"></script>
