--- a/projects/catalattitude.html
+++ b/projects/catalattitude.html
@@ -234,52 +234,70 @@
 <p class ="textFlyerGrizzlys">Ces deux flyers s’adressent à des publics différents : coffrets à tarifs dégressifs pour les professionnels, produits locaux et éditions de Noël pour les particuliers, tout en mettant en avant le savoir-faire 100 % catalan.</p>
 
 <h2 class="titlePublication">Publications Instagram</h2>
+<style>
+    /* Configuration de la grille */
+    .imgGrid {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 20px;
+        justify-content: center;
+        align-items: flex-start;
+        font-family: sans-serif;
+    }
+
+    /* Style unique pour TOUTES les cartes (Images et Instagram) */
+    .card-container {
+        width: 350px;  /* Nouvelle largeur */
+        height: 500px; /* Nouvelle hauteur pour tout voir */
+        overflow: hidden;
+        box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+        position: relative;
+        display: flex;
+        flex-direction: column;
+    }
+
+    /* Ajustement de l'image locale */
+    .creaGrid {
+        width: 100%;
+        height: 100%;
+        object-fit: cover; /* Remplit parfaitement la boîte */
+        display: block;
+    }
+
+    /* Ajustement de l'embed Instagram */
+    .card-container blockquote {
+        margin: 0 !important;
+        padding: 0 !important;
+        width: 100% !important;
+        min-width: 100% !important;
+        /* On réduit très légèrement pour laisser respirer les bords */
+        transform: scale(0.98);
+        transform-origin: top center;
+    }
+
+    /* Pour masquer la barre de défilement si elle apparaît */
+    .card-container::-webkit-scrollbar {
+        display: none;
+    }
+</style>
+
 <div class="imgGrid">
-    <div class="divCreaGrid">
-<!--        <p class="textHover ">Cette publication annonce la victoire des U20 (108-00). La photo de célébration montre la fierté et la cohésion de l'équipe.</p>-->
+
+    <div class="card-container">
         <img class="creaGrid" src="../img/Catal’attitude/Post%20concours%205%20ans.png" alt="Création Catal'attitude">
     </div>
-    <style>
-        .instagram-container-wrapper {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
-            justify-content: center;
-        }
 
-        .insta-box {
-            width: 300px;
-            height: 375px;
-            overflow: hidden;
-            border: 1px solid #dbdbdb;
-            border-radius: 8px;
-            background: #fff;
-            display: flex;
-            justify-content: center;
-            position: relative;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-        }
-
-        /* On force l'embed à prendre la largeur mais on le laisse déborder en bas si besoin */
-        .insta-box blockquote {
-            margin: 0 !important;
-            padding: 0 !important;
-            width: 100% !important;
-            min-width: 100% !important;
-        }
-    </style>
-
-    <div class="instagram-container-wrapper">
-        <div class="insta-box">
-            <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/DTOFVxnis4a/" data-instgrm-version="14"></blockquote>
-        </div>
-
-        <div class="insta-box">
-            <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/DRyrwutihyN/" data-instgrm-version="14"></blockquote>
-        </div>
+    <div class="card-container">
+        <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/DTOFVxnis4a/" data-instgrm-version="14"></blockquote>
     </div>
 
-    <script async src="//www.instagram.com/embed.js"></script>
+    <div class="card-container">
+        <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/DRyrwutihyN/" data-instgrm-version="14"></blockquote>
+    </div>
+
+</div>
+
+<script async src="//www.instagram.com/embed.js"></script>
 <!--    <div class="divCreaGrid">-->
 <!--        <p class="textHover ">Cette publication promeut le match des U20 contre les Ours de Toulouse. Le visuel précise les informations pratiques (lieu, date, heure) pour le public.</p>-->
 <!--        <img class="creaGrid" src="../img/grizzlys/imageGrid/2.webp" alt="Création Grizzlys Catalans">-->
