reglage de l'ordi

--- a/projects/cienfuegos.html
+++ b/projects/cienfuegos.html
@@ -79,22 +79,22 @@
         </div>
     </div>
 </div>
-<div class="palette-container">
-    <div class="circles-group">
-        <div class="circle red"></div>
-        <div class="circle orange"></div>
-        <div class="circle yellow"></div>
-        <div class="circle green"></div>
-    </div>
+<!--<div class="palette-container">-->
+<!--    <div class="circles-group">-->
+<!--        <div class="circle red"></div>-->
+<!--        <div class="circle orange"></div>-->
+<!--        <div class="circle yellow"></div>-->
+<!--        <div class="circle green"></div>-->
+<!--    </div>-->
 
-    <div class="logo-wrapper">
-        <img src="../img/cienfuegos/logCienfuegosAnouk" alt="Logo Cienfuegos" class="main-logo">
+<!--    <div class="logo-wrapper">-->
+<!--        <img src="../img/cienfuegos/logCienfuegosAnouk" alt="Logo Cienfuegos" class="main-logo">-->
 
-        <img src="../img/grizzlys/petiteFleche.webp" alt="" class="arrow">
+<!--        <img src="../img/grizzlys/petiteFleche.webp" alt="" class="arrow">-->
 
-        <span class="logo-caption">Proposition d'un nouveau logo</span>
-    </div>
-</div>
+<!--        <span class="logo-caption">Proposition d'un nouveau logo</span>-->
+<!--    </div>-->
+<!--</div>-->
 <div class="mainVideoWrapper">
     <div class="fullVideoContainer">
         <video controls poster="../img/lycee/videoPoster.jpg" class="fullVideo">
