add tiktok cienfuegos

--- a/projects/cienfuegos.html
+++ b/projects/cienfuegos.html
@@ -97,8 +97,8 @@
 </div>
 <div class="mainVideoWrapper">
     <div class="fullVideoContainer">
-        <video controls poster="../img/lycee/videoPoster.jpg" class="fullVideo">
-            <source src="../img/lycee/videoLycee.mov" type="video/mp4">
+        <video controls class="fullVideo">
+            <source src="../img/cienfuegos/tiktok.MOV" type="video/mp4">
             Votre navigateur ne supporte pas la vidéo.
         </video>
     </div>
