--- a/contact.html
+++ b/contact.html
@@ -36,12 +36,12 @@
         </div>
 
         <div class="contactGrid">
-            <a href="mailto:anoukthls@icloud.com" class="contactCard">
+            <a href="mailto:anoukthms@icloud.com" class="contactCard">
                 <div class="cardIcon">
                     <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" viewBox="0 0 24 24"><path fill="currentColor" d="M4 20q-.825 0-1.412-.587T2 18V6q0-.825.588-1.412T4 4h16q.825 0 1.413.588T22 6v12q0 .825-.587 1.413T20 20zm8-7L4 8v10h16V8zm0-2l8-5H4zM4 8V6v12z"/></svg>
                 </div>
                 <h2 class="infoMiniTitle">E-MAIL</h2>
-                <p class="contactValue">anoukthls@icloud.com</p>
+                <p class="contactValue">anoukthms@icloud.com</p>
             </a>
 
             <a href="https://www.linkedin.com/in/anouk-thomas-469045348/" target="_blank" class="contactCard">
@@ -50,6 +50,14 @@
                 </div>
                 <h2 class="infoMiniTitle">LINKEDIN</h2>
                 <p class="contactValue">Anouk Thomas</p>
+            </a>
+
+            <a href="tel:+33640630377" target="_blank" class="contactCard">
+                <div class="cardIcon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" viewBox="0 0 16 16"><path fill="currentColor" fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42a18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z"/></svg>
+                </div>
+                <h2 class="infoMiniTitle">TÉLEPHONE</h2>
+                <p class="contactValue">06 40 63 03 77</p>
             </a>
 
             <div class="contactCard no-click">
@@ -71,7 +79,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24"><path fill="currentColor" d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2zm-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93zM6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37z"/></svg>
                 <span class="footerLinkLabel">LINKEDIN</span>
             </a>
-            <a href="mailto:anoukthls@icloud.com" class="footerLink">
+            <a href="mailto:anoukthms@icloud.com" class="footerLink">
                 <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24"><path fill="currentColor" d="M4 20q-.825 0-1.412-.587T2 18V6q0-.825.588-1.412T4 4h16q.825 0 1.413.588T22 6v12q0 .825-.587 1.413T20 20zm8-7L4 8v10h16V8zm0-2l8-5H4zM4 8V6v12z"/></svg>
                 <span class="footerLinkLabel">MAIL</span>
             </a>
