debut de vincenzo

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <H1>ANOUK THOMAS</H1>
                     </div>
                     <div class="subtitle">
-                        <p id="subtitle">CHARGÉE DE COMMUNICATION (JUNIOR)</p>
+                        <p id="subtitle">CHARGÉE DE COMMUNICATION</p>
                     </div>
                 </div>
                 <div class="waveContainer">
