--- a/projects/catalattitude.html
+++ b/projects/catalattitude.html
@@ -66,6 +66,7 @@
             <br>Enfin, <strong>Catal’attitude</strong> propose des services de communication digitale et des formations. L’activité aide les petites entreprises à gérer leurs réseaux sociaux et à mettre en place une stratégie de communication simple et efficace.</p>
     </div>
 </div>
+<h1 class="titreIdentite">Idéntitée visuelle</h1>
 <div class="projectContentGrizzlys">
     <div class="flecheCatalattitude">
         <img class="imgFlecheCatalattitude" src="../img/grizzlys/petiteFleche.webp">
@@ -119,6 +120,7 @@
         </div>
     </div>
 </div>
+
 <h1 class="grostitre">L’ACCENT CATALAN</h1>
 <img src="../img/grizzlys/grandeFleche.webp" class="grandeFleche" alt="">
 <div class="projectGalleryGrizzlys">
@@ -226,13 +228,33 @@
     </div>
 
 </div>
-
+<h1 class="titreIdentite">Flyers</h1>
 <div class="flyers">
-    <img class="imgFlyerCatalan1" src="../img/Catal’attitude/Flyer%20A5%20professionnels.png" alt="Flyer Grizzlys Catalans">
-    <img class="imgFlyerCatalan3" src="../img/Catal’attitude/Flyer%20A5%20particuliers.png" alt="Flyer Grizzlys Catalans">
-</div>
-<p class ="textFlyerGrizzlys">Ces deux flyers s’adressent à des publics différents : coffrets à tarifs dégressifs pour les professionnels, produits locaux et éditions de Noël pour les particuliers, tout en mettant en avant le savoir-faire 100 % catalan.</p>
+    <img class="imgFlyerCatalan1"
+         src="../img/Catal’attitude/Flyer%20A5%20professionnels.png"
+         alt="Flyer Grizzlys Catalans">
 
+    <img class="imgFlyerCatalan3"
+         src="../img/Catal’attitude/Flyer%20A5%20particuliers.png"
+         alt="Flyer Grizzlys Catalans">
+</div>
+
+<p class ="textFlyerGrizzlys">Ces deux flyers s’adressent à des publics différents : coffrets à tarifs dégressifs pour les professionnels, produits locaux et éditions de Noël pour les particuliers, tout en mettant en avant le savoir-faire 100 % catalan.</p>
+<div class="mainVideoWrapper">
+    <div class="fullVideoContainerCatan">
+        <img src="../img/Catal’attitude/boxApéro.jpg" alt="box apéro Catal'attitude" class="imageBoxAperoCatalan">
+    </div>
+
+    <div class="videoDetailSection">
+        <div class="detailLineCatalan"></div>
+        <div class="detailContent">
+            <h2 class="detailTitle">RÉALISATION PRINT</h2>
+            <p class="detailText">
+                Glissé dans les colis, ce flyer A6 présente l'abonnement à la box apéro : il détaille le contenu mensuel et renvoie directement vers le site grâce à un QR code.
+            </p>
+        </div>
+    </div>
+</div>
 <h2 class="titlePublication">Publications Instagram</h2>
 <style>
     /* Configuration de la grille */
@@ -283,7 +305,8 @@
 
 <div class="imgGrid">
 
-    <div class="card-container" style="width: 350px; height: 508px;">
+    <div class="divCreaGrid" style="width: 350px; height: 480px;">
+        <p class="textHover">Publication Instagram pour un concours spécial 5 ans : elle annonce une box surprise d'une valeur de 50 € à gagner pour fêter l'anniversaire de la marque.</p>
         <img class="creaGrid" src="../img/Catal’attitude/Post%20concours%205%20ans.png" alt="Création Catal'attitude">
     </div>
 
@@ -297,24 +320,24 @@
 
 </div>
 
-<script async src="//www.instagram.com/embed.js"></script>
+<!--<script async src="//www.instagram.com/embed.js"></script>-->
 
 </div>
-
+<h1 class="titreIdentite">Carte Cadeau</h1>
 <div class="carteCadeauCatalattitude">
     <div>
         <img src="../img/Catal’attitude/CarteCadeauxRecto.png" alt="Cate Cadeau Catal'attitude" class="imgCarteCadeauCatalattitude">
-        <p class="rectoverso">recto</p>
+        <p class="rectoverso">Recto</p>
     </div>
     <img src="../img/grizzlys/petiteFleche.webp" alt="petite fleche" class="flecheCadeau" >
     <div>
         <img src="../img/Catal’attitude/CarteCadeauxVerso.png" alt="Cate Cadeau Catal'attitude" class="imgCarteCadeauCatalattitude">
-        <p class="rectoverso">verso</p>
+        <p class="rectoverso">Verso</p>
     </div>
 </div>
 <p class="texteCadeau">Créée pour Noël, cette carte cadeau sert à offrir l’abonnement à la box apéro : elle explique le concept d'un côté et permet de personnaliser le cadeau de l'autre.</p>
 
-
+<h1 class="titreIdentite">Site calendrier de l'avent</h1>
 <div class="ordietgridCatalattitude">
     <div class="calandriergrid">
         <p class="descriptionCalendrier">Exemples de visuels que l'on peut retrouver dans le calendrier de l'avent.</p>
@@ -335,21 +358,7 @@
         </div>
     </a>
 </div>
-<div class="mainVideoWrapper">
-    <div class="fullVideoContainerCatan">
-        <img src="../img/Catal’attitude/boxApéro.jpg" alt="box apéro Catal'attitude" class="imageBoxAperoCatalan">
-    </div>
 
-    <div class="videoDetailSection">
-        <div class="detailLineCatalan"></div>
-        <div class="detailContent">
-            <h2 class="detailTitle">RÉALISATION PRINT</h2>
-            <p class="detailText">
-                Glissé dans les colis, ce flyer A6 présente l'abonnement à la box apéro : il détaille le contenu mensuel et renvoie directement vers le site grâce à un QR code.
-            </p>
-        </div>
-    </div>
-</div>
 <h1 class="grostitre" style="color: #fecf0e">MEETING PRO</h1>
 
 
@@ -376,6 +385,7 @@
         </div>
     </nav>
 </footer>
+
 
 
     <script src="../data.js"></script>
