--- a/projects/vincenzo.html
+++ b/projects/vincenzo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Portfolio - CIENFUEGOS</title>
+    <title>Portfolio - Restaurant Vincenzo</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../project.css">
     <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
@@ -31,14 +31,14 @@
 </nav>
 <div class="titleimg">
     <div class="imageprincipal">
-        <img class="imageprincipalBages" src="../img/cienfuegos/imagePrincipal.webp" alt="Cienfuegos">
+        <img class="imageprincipalBages" src="../img/vincenzo/imagePrincipal.jpg" alt="Union Basket Des Aspres">
     </div>
     <div class="projecttitleGrizzlys">
         <div class="titletext">
-            <h1>FESTIVAL CIENFUEGOS</h1>
+            <h1>RESTAURANT VINCENZO</h1>
         </div>
         <div class="subtitleProject">
-            <p class="subtitleProject">PROJET SCOLAIRE</p>
+            <p class="subtitleProject">PROJET SCOLAIRE FICTIF</p>
         </div>
     </div>
 </div>
@@ -47,11 +47,11 @@
     <div class="informationsProjectLeft">
         <div>
             <h2 class="infoMiniTitle">ASSOCIATION</h2>
-            <p class="infoMiniText">FESTIVAL CIENFUEGOS</p>
+            <p class="infoMiniText">RESTAURANT VINCENZO</p>
         </div>
         <div>
             <h2 class="infoMiniTitle">LOCALISATION</h2>
-            <p class="infoMiniText">ALENYA</p>
+            <p class="infoMiniText">PERPIGNAN</p>
         </div>
         <div>
             <h2 class="infoMiniTitle">ANNÉE</h2>
@@ -60,79 +60,30 @@
     </div>
     <div class="informationsProjectRight">
         <h2 class="infoMiniTitle">DESCRIPTION</h2>
-        <p class="infoMiniText">Le <STRONG>festival Cienfuegos</STRONG> d’Alénya, créé en 2020, est un événement latino-cubain organisé chaque été dans le parc du village. Il est entièrement gratuit et propose pendant quelques jours des concerts, des animations de danse (salsa, bachata…), des projections de films et un petit village avec restauration et artisanat.
-            Le festival a aussi une dimension solidaire, avec une collecte de médicaments ou de lunettes pour soutenir Cuba.</p>
+        <p class="infoMiniText">Ce site internet pour le <STRONG>Restaurant Vincenzo</STRONG> a été réalisé sur WordPress. Il s'agit d'un exercice fictif créé dans un cadre scolaire, le restaurant n'existant pas réellement. L'objectif de ce projet était de recopier exactement le site de mon formateur pour apprendre à maîtriser les outils de WordPress et à respecter scrupuleusement une mise en page imposée.</p>
     </div>
 </div>
 <div class="projectContentGrizzlys">
-    <div class="colorsProjectCienfuegos">
+    <div class="colorsProjectGrizzlys">
         <div class="fleche">
             <img class="imgFleche" src="../img/grizzlys/petiteFleche.webp">
             <p class="TextLogo">Le logo</p>
-            <p class="NoCharte">(pas de charte graphique existante)</p>
+        </div>
+        <div class="logoGrizzlys">
+            <img class="imgLogoBages" src="../img/bages/logo.webp">
+        </div>
+        <div class="colorVert1">
+        </div>
+        <div class="colorVert2">
+        </div>
+        <div class="colorVert3">
+        </div>
+        <div class="colorBlanc">
         </div>
 
-        <div class="logoCienfuegos">
-            <img class="imgLogoCienfuegos" src="../img/cienfuegos/logo.png">
-        </div>
-        <div class="colorNoir">
-        </div>
-    </div>
-</div>
-<div class="palette-container">
-    <div class="circles-group">
-        <div class="circle red"></div>
-        <div class="circle orange"></div>
-        <div class="circle yellow"></div>
-        <div class="circle green"></div>
-    </div>
-
-    <div class="logo-wrapper">
-        <img src="../img/cienfuegos/width_800.webp" alt="Logo Cienfuegos" class="main-logo">
-
-        <img src="../img/grizzlys/petiteFleche.webp" alt="" class="arrow">
-
-        <span class="logo-caption">Proposition d'un nouveau logo</span>
-    </div>
-</div>
-<div class="mainVideoWrapper">
-    <div class="fullVideoContainer">
-        <video controls class="fullVideo">
-            <source src="../img/cienfuegos/tiktok.MOV" type="video/mp4">
-            Votre navigateur ne supporte pas la vidéo.
-        </video>
-    </div>
-
-    <div class="videoDetailSection">
-        <div class="detailLineCienfuegos"></div>
-        <div class="detailContent">
-            <h2 class="detailTitle">RÉALISATION AUDIOVISUELLE</h2>
-            <p class="detailText">
-                C’est une tendance TikTok dont le but est de donner envie aux jeunes d’aller au festival, en suggérant que l’ambiance était géniale, puisque les participantes annoncent qu’elles reviendront l’année prochaine.
-            </p>
-        </div>
     </div>
 </div>
 
-<h2 class="titreMerch">Proposition de goodies à l’effigie du nouveau logo :</h2>
-<div class="gridMerch">
-    <div class="divMerch">
-        <img src="../img/cienfuegos/merch/tshirt.png" alt="tshirt" class="imageMerch">
-        <p class="texteMerch">T-shirts pour les bénévoles</p>
-    </div>
-    <div class="divMerch">
-        <img src="../img/cienfuegos/merch/eventail.png" alt="eventail" class="imageMerch">
-        <p class="texteMerch">Éventails</p>
-    </div>
-    <div class="divMerch">
-        <img src="../img/cienfuegos/merch/serviette.png" alt="serviette" class="imageMerch">
-        <p class="texteMerch">Petites serviettes pour les danseurs</p>
-    </div>
-    <div class="divMerch">
-        <img src="../img/cienfuegos/merch/totebag.png" alt="totebag" class="imageMerch">
-        <p class="texteMerch">Tote-bag</p>
-    </div>
-</div>
 <footer>
     <nav class="footerNavbar">
         <div class="footerLogosLeft">
@@ -156,8 +107,9 @@
         </div>
     </nav>
 </footer>
+
+
 <script src="../data.js"></script>
 <script src="../script.js"></script>
 </body>
-</html>
 </html>
