ajout de tout les projet

--- a/projects/cienfuegos.html
+++ b/projects/cienfuegos.html
@@ -64,6 +64,7 @@
             Le festival a aussi une dimension solidaire, avec une collecte de médicaments ou de lunettes pour soutenir Cuba.</p>
     </div>
 </div>
+<h1 class="titreIdentite">Idéntitée visuelle</h1>
 <div class="projectContentGrizzlys">
     <div class="colorsProjectCienfuegos">
         <div class="fleche">
