--- a/projects/vincenzo.html
+++ b/projects/vincenzo.html
@@ -63,6 +63,7 @@
         <p class="infoMiniText">Ce site internet pour le <STRONG>Restaurant Vincenzo</STRONG> a été réalisé sur WordPress. Il s'agit d'un exercice fictif créé dans un cadre scolaire, le restaurant n'existant pas réellement. L'objectif de ce projet était de recopier exactement le site de mon formateur pour apprendre à maîtriser les outils de WordPress et à respecter scrupuleusement une mise en page imposée.</p>
     </div>
 </div>
+<h1 class="titreIdentite">Idéntitée visuelle</h1>
 <div class="projectContentGrizzlys">
     <div class="colorsProjectGrizzlys">
         <div class="fleche">
