--- a/projects/basket.html
+++ b/projects/basket.html
@@ -64,6 +64,7 @@
             Implantée dans les communes de Brouilla, Bages et Saint-Génis des Fontaines, l’UBA accueille aujourd’hui près de 200 licenciés répartis sur une dizaine d’équipes, de U7 aux loisirs.</p>
     </div>
 </div>
+<h1 class="titreIdentite">Idéntitée visuelle</h1>
 <div class="projectContentGrizzlys">
     <div class="colorsProjectGrizzlys">
         <div class="fleche">
